fix: side menu hidden on mobile

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -8,6 +8,7 @@
 
 html,
 body {
+  position: relative;
   max-width: 100vw;
   overflow-x: hidden;
   background-color: $color-secondary;
