--- a/components/side-menu/_side-menu.module.scss
+++ b/components/side-menu/_side-menu.module.scss
@@ -5,7 +5,6 @@
   position: absolute;
   top: 0;
   right: -40vw;
-  display: none;
   z-index: 1;
   width: 40vw;
   height: 100vh;
@@ -15,7 +14,6 @@
   transition: right 0.5s ease;
 
   &_visible {
-    display: block;
     right: 0;
   }
 
